# shop-service-kr3

./: README.md  docker-compose.yaml
docker/: service.Dockerfile
services/gateway/: README.md  pyproject.toml
services/gateway/gateway/: main.py
services/orders/: README.md  pyproject.toml
services/orders/orders/: main.py
services/payments/: README.md  pyproject.toml
services/payments/payments/: config.py  dependencies.py  main.py  uow.py
services/payments/payments/database/: __init__.py  account.py
services/payments/payments/models/: account.py
services/payments/payments/repositories/: account.py  base.py
services/payments/payments/routers/: account.py
services/payments/payments/services/: account.py  base.py
