[project]
name = "gateway"
version = "0.1.0"
description = "A FastAPI service for routing requests to other services"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "structlog>=25.4.0",
    "uvicorn>=0.34.3",
    "common",
]

[tool.uv.sources]
common = { workspace = true }

[tool.uv.workspace]
members = ["../../packages/*"]

[tool.hatch.build.targets.wheel]
packages = ["gateway"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"