[project]
name = "payments"
version = "0.1.0"
description = "A FastAPI service for processing payments"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "uvicorn>=0.34.3",
    "common",
    "sqlalchemy>=2.0.41",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.9.1",
]

[tool.uv.sources]
common = { workspace = true }

[tool.uv.workspace]
members = ["../../packages/*"]

[tool.hatch.build.targets.wheel]
packages = ["payments"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
